Added title, update pattern for categories, on click detailfunction and more

--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,14 @@
 <body>
     <h1>Wat levert ieder land aan de collectie van het NMVW?</h1>
     <h2>De categorie met de meeste objecten, per land</h2>
-    <div class="svgWrap">
+    <section class="svgWrap">
         <svg id="legendSvg">
         </svg>
         <svg id="mapSvg">
         </svg>
-        <svg id="detailSvg">
-        </svg>
-    </div>
+        <section id="detailSection">
+        </section>
+    </section>
     <a href="https://github.com/DaanKos/frontend-data">Lees meer over dit project op de GitHub pagina</a>
     <script src="scripts/bundle.js"></script>
 </body>
