--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,24 @@
     <title>De categorie met de meeste objecten, per land - visualisatie</title>
 </head>
 <body>
-    <h1>Wat levert ieder land aan de collectie van het NMVW?</h1>
-    <h2>De categorie met de meeste objecten, per land</h2>
-    <section class="svgWrap">
-        <svg id="legendSvg">
-        </svg>
-        <svg id="mapSvg">
-        </svg>
-        <section id="detailSection">
+    <header>
+        <h1>Wat levert ieder land aan de collectie van het NMVW?</h1>
+        <h2>De categorie met de meeste objecten, per land</h2>
+        <p>Scroll om te zoomen, klik op een land om rechts de gedetailleerde verdeling te zien.</p>
+    </header>
+    <main>
+        <section class="svgWrap">
+            <svg id="legendSvg">
+            </svg>
+            <svg id="mapSvg">
+            </svg>
+            <section id="detailSection">
+            </section>
         </section>
-    </section>
-    <a href="https://github.com/DaanKos/frontend-data">Lees meer over dit project op de GitHub pagina</a>
+    </main>
+    <footer>
+        <a href="https://github.com/DaanKos/frontend-data">Lees meer over dit project op de GitHub pagina</a>
+    </footer>
     <script src="scripts/bundle.js"></script>
 </body>
 </html>
