Small title change

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/styling.css">
     <script src="https://d3js.org/d3-zoom.v1.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <title>De categorie met de meeste objecten, per land - visualisatie</title>
+    <title>NMVW: De categorie met de meeste objecten, per land - interactieve datavisualisatie</title>
 </head>
 <body>
     <header>
